# apply-gpt

./: README.md  lint  pyproject.toml  sample.about-me.yaml  sample.about-you.yaml
apply_gpt/: achievements_tuner.py  curriculum_generator.py  data.py  main.py  openai_.py  text_converter.py  utils.py
apply_gpt/openai-assets/: system-message.txt  user-message-template.txt
scripts/: generate-curriculum  tune-achievements
tests/assets/about/: lindsay.yaml
tests/assets/jobs/: adobe.txt
