[tool.poetry]
name = "apply-gpt"
version = "0.1.0"
description = "A tool to help you write curriculums and cover letters for job applications"
authors = ["Nicola De Angeli"]
license = "MIT"
readme = "README.md"
packages = [{include = "apply_gpt"}]

[tool.poetry.dependencies]
pydantic = "^2.3.0"
python = "^3.11"
pyyaml = "^6.0.1"
openai = "^0.27.9"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
ruff = "^0.0.285"
types-pyyaml = "^6.0.12.11"

[tool.ruff]
select = ["F", "E", "W", "I001"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
